--- a/app/templates/layout.hbs
+++ b/app/templates/layout.hbs
@@ -12,7 +12,7 @@
     <link href="{{assets}}/css/bootstrap-theme.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="{{assets}}/css/theme.css" rel="stylesheet">
+    <link href="{{assets}}/css/style.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -35,5 +35,6 @@
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{{assets}}/js/bootstrap.min.js"></script>
+    <script src="{{assets}}/js/app.min.js"></script>
   </body>
 </html>
